# sequelite

./: .gitignore  Cargo.toml  README.md
sequel-test/: Cargo.toml
sequel-test/src/: main.rs
sequelite_macro/: Cargo.toml
sequelite_macro/src/: lib.rs
src/: connection.rs  lib.rs  sql_types.rs
src/model/: column.rs  delete_query.rs  migrator.rs  mod.rs  query.rs  relation.rs  update_query.rs
