[workspace]
members = [
    ".",
    "./sequelite_macro",
    "./sequel-test"
]

[package]
name = "sequelite"
version = "0.2.0"
edition = "2021"
exclude = [
    "sequel-test",
    "target",
]
license = "MIT"
license-file = "LICENSE"
description = "A simple SQLite ORM for Rust"
repository = "https://github.com/olix3001/sequelite"
keywords = ["sqlite", "orm", "sqlite3", "sqlite-orm", "rusqlite"]
categories = ["database", "api-bindings"]
readme = "README.md"

[features]
default = ["chrono"]
chrono = ["rusqlite/chrono"]
bundled = ["rusqlite/bundled"]

[dependencies]
rusqlite = { version = "0.28" }
env_logger = "0.9"
log = "0.4"
sequelite_macro = { path = "./sequelite_macro" }
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
codegen-units = 1
embed-bitcode = true