[package]
name = "sequelite_macro"
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/olix3001/sequelite/sequelite_macro"
description = "Sequelite macros for generating SQL models"
authors = ["Oliwier Michalik"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"